--- a/scss/sheets/_crew-sheet.scss
+++ b/scss/sheets/_crew-sheet.scss
@@ -202,7 +202,7 @@
                 }
             }
         }
-        section.nav-panel {
+        section.nav-group {
             .tab.active[data-tab="turfs"] {
                 .item {
                     position: relative;
