--- a/scss/sheets/_npc-sheet.scss
+++ b/scss/sheets/_npc-sheet.scss
@@ -90,7 +90,7 @@ section.char-top {
 			// top: -4px;
 			// height: 100%;
 
-			.nav-panel {
+			.nav-group {
 				nav {
 					width: calc(100% + 2 * 10px);
 					height: 28px;
