--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -235,7 +235,7 @@
   </section>
 
   {{!-- Tabs --}}
-  <section class="tab-content nav-panel">
+  <section class="tab-content nav-group">
 
     {{!-- Turfs --}}
     <div class="tab" data-tab="turfs">
