--- a/templates/npc-sheet.hbs
+++ b/templates/npc-sheet.hbs
@@ -43,7 +43,7 @@
 
 
 	<section class="flex-horizontal char-tabs">
-		<div class="tab-content flex-vertical grow-two nav-panel">
+		<div class="tab-content flex-vertical grow-two nav-group">
 			<nav class="tabs flex-horizontal">
 				<a class="item" data-tab="description">Description</a>
 				<a class="item" data-tab="friends-and-foes">Friends & Foes</a>
